k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smishing-backend
spec:
  selector:
    app: smishing-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort # This will expose the service externally
